# gosling

./: .gitignore  CODEOWNERS  Justfile  README.md  clear_sessions.sh  env.example.json  pubspec.yaml
.github/workflows/: ci.yml
app/src/main/: AndroidManifest.xml
goose-remote/: README.md  command_server.py
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart
lib/features/app/: app.dart
lib/features/chat/: chat_page.dart  message.dart  message_bubble.dart
lib/features/remote/: remote_desktop_page.dart  remote_mobile_page.dart  remote_server.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart
lib/shared/theme/: theme.dart
lib/shared/widgets/: loader.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
mMCP-spec/: SPECIFICATION.md
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_gosling.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_gosling.podspec
rust_builder/windows/: CMakeLists.txt
test/features/app/: app_test.dart
test/helpers/: widget_helpers.dart
test/mocks/: mocks.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
